Add README.md file

--- a/frontend/templates/signup.html
+++ b/frontend/templates/signup.html
@@ -15,11 +15,11 @@
                     <span class="input-group-text" id="basic-addon3">
                         <img src="../static/images/person.svg" alt="Иконка пользователя">
                     </span>
-                    <input id="name" type="text" class="form-control text-color:red" placeholder="ФИО"
-                           aria-label="ФИО" aria-describedby="basic-addon3">
+                    <input id="name" type="text" class="form-control text-color:red" placeholder="Фамилия и имя"
+                           aria-label="Фамилия и имя" aria-describedby="basic-addon3">
                 </div>
                 <div class="input-valid d-none">
-                    ФИО должно начинаться с заглавной буквы и содержать русские буквы
+                    ФИ должно начинаться с заглавной буквы и может содержать латинские буквы
                 </div>
                 <div class="input-group">
                     <span class="input-group-text" id="basic-addon1">
